# tree-sitter-teralang

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-teralang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_teralang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTeraLang/: teralang.h
bindings/swift/TreeSitterTeraLangTests/: TreeSitterTeraLangTests.swift
src/: grammar.json  node-types.json  parser.c
test/: test.tera
